--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -2,38 +2,15 @@
 
 .navbar {
   z-index: 100;
-  text-align: center;
-  padding: 5px;
+  padding: 1rem;
   display:flex;
-  background-color: #c6b198;
-  position: sticky;
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  justify-content: space-evenly;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+  width: 100vw;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
 
-.pagesmob{
-    color: #0c0c60;
-    font-family: "Comfortaa", cursive;
-    font-size: x-small;
-    display: flex;
-    margin-left: 17px;
-  }
- .words{
-  padding: 9px;
- }
-  .displayimagemob {
-    position: relative;
-    left: 10px;
-    width: 50px;
-    height: 50px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    border-radius: 30%;
-    margin-left: 15px;
-    margin-top: 15px;
-  }
 
